<resources>
    <string name="app_name">RUDApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">RUDMarket</string>
    <string name="menu_catalogo">Catalogo</string>
    <string name="menu_promozioni">Promozioni</string>
    <string name="menu_doveSiamo">Dove siamo</string>
    <string name="menu_myrud">MyRUD</string>
    <string name="menu_registrazione">Registrazione</string>

    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in_short">SIGNIN_SHORT</string>
    <string name="action_sign_in">SIGNIN</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_prodotti">ProdottiActivity</string>
</resources>
